<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassengerRegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-400dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/car" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/LogInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="60dp"
        android:text="SignUp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/HelloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogInTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:textSize="18dp"
        android:text="Please fillout the form bellow"/>

    <RelativeLayout
        android:id="@+id/layoutr"
        android:alpha="0.9"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/login_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="405dp"
        android:layout_height="653dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="79dp">

        <EditText
            android:id="@+id/registrationFirstName"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/registrationLastName"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/registrationEmail"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/registrationPhone"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone" />

        <EditText
            android:id="@+id/registrationAddress"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/address_hint"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/registrationPassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registrationConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#805D84"
            android:text="@string/register_button"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="341dp" />

    </LinearLayout>

</RelativeLayout>
</RelativeLayout>