<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentRidePassenger">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginTop="300dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="357dp">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="#805D84"
                android:textSize="19dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="266dp"
                    android:layout_height="wrap_content"
                    android:text="address 1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="266dp"
                    android:layout_height="wrap_content"
                    android:text="address 2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="390dp"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="448dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_d"
                android:textColor="#805D84"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="name"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lastname" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="lastname"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0652345678"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="asd@gmail.com"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_type" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="type"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pets" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yes"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/babies" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#805D84"
                android:text="@string/message_d"
                android:textColor="#FFFFFF"
                android:textSize="12dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="156dp"
            android:layout_height="53dp"
            android:layout_marginTop="600dp"
            android:ems="10"
            android:inputType="time"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="670dp"
            tools:text="10:43" />

        <Button
            android:id="@+id/button6"
            android:layout_width="137dp"
            android:layout_height="46dp"
            android:background="#ED0808"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="200dp"
            android:text="@string/panic"
            android:textColor="#FFFFFF"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="233dp"
            tools:layout_editor_absoluteY="677dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="500dp"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/login_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-64dp"
        tools:layout_editor_absoluteY="56dp" />

</RelativeLayout>