<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CurrentRideDriver">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- The main content view -->
        <RelativeLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="580dp"
                android:background="#805D84"
                android:text="@string/finished_ride"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-2dp"
                tools:layout_editor_absoluteY="562dp" />

            <LinearLayout
                android:layout_width="413dp"
                android:layout_height="207dp"
                android:layout_marginTop="440dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-2dp"
                tools:layout_editor_absoluteY="429dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_p"
                    android:textColor="#805D84"
                    android:textSize="19sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="8dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Marko"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lastname" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Markovic"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0652345678"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="marko.markovic@gmail.com"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Kosovska 10"
                        android:textAlignment="textEnd" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="96dp"
                android:layout_marginTop="320dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="300dp">


                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textColor="#805D84"
                    android:textSize="19dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:text="Bulevar vojvode Stepe 31" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:text="@string/to" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="205dp"
                        android:layout_height="wrap_content"
                        android:text="Jevrejska 14" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="156dp"
                android:layout_height="53dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="620dp"
                android:ems="10"
                android:inputType="time"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textAlignment="center"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="676dp"
                tools:text="09:06" />

            <Button
                android:id="@+id/button6"
                android:layout_width="137dp"
                android:layout_height="46dp"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="620dp"
                android:background="#ED0808"
                android:text="@string/panic"
                android:textColor="#FFFFFF"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="674dp" />

        </RelativeLayout>


    </androidx.drawerlayout.widget.DrawerLayout>


</RelativeLayout>